[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["Denys Zaitsev <denzai83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.11"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"
pydantic = {extras = ["email"], version = "^1.10.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
